--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ MYSQL_SERVER=127.0.0.1
 MYSQL_PORT=3306
 MYSQL_DB=final
 MYSQL_USER=root
-MYSQL_PASSWORD=
+MYSQL_PASSWORD=root
 
-GEMINI_API_KEY=AIzaSyBOpp8QgslWpt7Zq4Ao_c2gh6AOHFc9n18
+GEMINI_API_KEY=AIzaSyD6Fy_pQHLo8bZYsSeJZJRUQJhho-PYfe4
